[gd_scene load_steps=26 format=2]

[ext_resource path="res://src/UI/HUD/MobileControlsHUD.gd" type="Script" id=1]
[ext_resource path="res://assets/art/ui/mobile-button1.png" type="Texture" id=2]
[ext_resource path="res://assets/art/ui/mobile-button3.png" type="Texture" id=3]
[ext_resource path="res://assets/art/ui/mobile-button2.png" type="Texture" id=4]
[ext_resource path="res://src/UI/Controls/PauseButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UI/Controls/RetryButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/UI/Controls/PausedPlayButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/UI/Controls/CloseButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/art/ui/jump-mobile-button.png" type="Texture" id=9]
[ext_resource path="res://assets/art/ui/left-mobile-button.png" type="Texture" id=10]
[ext_resource path="res://assets/art/ui/right-mobile-button.png" type="Texture" id=11]
[ext_resource path="res://src/UI/Controls/Settings/TouchScreenControlsOnOffButton.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/fonts/8-bit-fortress-font-7px.tres" type="DynamicFont" id=13]
[ext_resource path="res://src/UI/HUD/paused-text.png" type="Texture" id=14]
[ext_resource path="res://src/UI/Controls/BigBackButton.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/UI/Controls/Settings/SoundButton.tscn" type="PackedScene" id=16]
[ext_resource path="res://src/UI/Controls/Settings/MusicButton.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/themes/pause/pause_theme.tres" type="Theme" id=18]
[ext_resource path="res://assets/themes/pause/touch-screen-controls-text.png" type="Texture" id=19]
[ext_resource path="res://src/UI/HUD/hud-key.png" type="Texture" id=20]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 115 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 40, 85, 40, 85, -100, 0, -100 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( -40, 40, 50, 40, 50, -100, -40, -100 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24, 10 )

[sub_resource type="Animation" id=5]
resource_name = "hover"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PausedText:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 160, 90 ), Vector2( 160, 85 ) ]
}

[node name="MobileControlsHUD" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" parent="Control" instance=ExtResource( 5 )]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -18.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -158.0

[node name="HBoxContainerLeft" type="HBoxContainer" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -64.0
margin_right = 120.0
margin_bottom = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftTouchScreenButton" type="TouchScreenButton" parent="Control/HBoxContainerLeft"]
position = Vector2( 0, 35 )
z_as_relative = false
normal = ExtResource( 4 )
shape = SubResource( 1 )
passby_press = true
action = "move_left"
visibility_mode = 1

[node name="RightTouchScreenButton" type="TouchScreenButton" parent="Control/HBoxContainerLeft"]
position = Vector2( 52, 35 )
normal = ExtResource( 2 )
shape = SubResource( 2 )
shape_centered = false
passby_press = true
action = "move_right"
visibility_mode = 1

[node name="LeftButton" type="TextureRect" parent="Control/HBoxContainerLeft"]
visible = false
modulate = Color( 0.380392, 0.337255, 0.337255, 1 )
margin_right = 48.0
margin_bottom = 63.0
texture = ExtResource( 10 )

[node name="RightButton" type="TextureRect" parent="Control/HBoxContainerLeft"]
visible = false
modulate = Color( 0.392157, 0.34902, 0.34902, 1 )
margin_right = 48.0
margin_bottom = 63.0
texture = ExtResource( 11 )

[node name="HBoxContainerRight" type="HBoxContainer" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -17.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JumpTouchScreenButton" type="TouchScreenButton" parent="Control/HBoxContainerRight"]
position = Vector2( -8, -12 )
normal = ExtResource( 3 )
shape = SubResource( 3 )
shape_centered = false
action = "jump"
visibility_mode = 1

[node name="JumpButtonArea2D" type="Area2D" parent="Control"]
visible = false
modulate = Color( 0.0431373, 0.352941, 0.133333, 1 )
self_modulate = Color( 0.560784, 0.0627451, 0.0627451, 1 )
position = Vector2( 232, 136 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/JumpButtonArea2D"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Control/JumpButtonArea2D"]
texture = ExtResource( 9 )
region_enabled = true
region_rect = Rect2( 0, 0, 50, 20 )

[node name="TextureRect" type="TextureRect" parent="Control"]
visible = false
modulate = Color( 0.407843, 0.376471, 0.376471, 1 )
margin_left = 208.0
margin_top = 112.0
margin_right = 256.0
margin_bottom = 144.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Sprite" parent="Control"]
position = Vector2( 286, 10 )
texture = ExtResource( 20 )

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.247059 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" parent="PauseOverlay" instance=ExtResource( 8 )]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -18.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -158.0

[node name="PausedText" type="Sprite" parent="PauseOverlay"]
position = Vector2( 160, 90 )
texture = ExtResource( 14 )

[node name="TextAnimationPlayer" type="AnimationPlayer" parent="PauseOverlay"]
autoplay = "hover"
anims/hover = SubResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="PauseOverlay"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 34.0
margin_bottom = 54.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BigBackButton" parent="PauseOverlay/HBoxContainer" instance=ExtResource( 15 )]
margin_left = 77.0
margin_right = 116.0
margin_bottom = 20.0
next_scene_path = "res://src/UI/LevelSelectScreens/CaveLevelSelect.tscn"

[node name="PausedPlayButton" parent="PauseOverlay/HBoxContainer" instance=ExtResource( 7 )]
margin_left = 120.0
margin_right = 175.0
margin_bottom = 20.0

[node name="RetryButton" parent="PauseOverlay/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 179.0
margin_right = 242.0
margin_bottom = 20.0

[node name="HBoxContainer2" type="HBoxContainer" parent="PauseOverlay"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -53.0
margin_bottom = -33.0
theme = ExtResource( 18 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundButton" parent="PauseOverlay/HBoxContainer2" instance=ExtResource( 16 )]
margin_left = 123.0
margin_right = 141.0
margin_bottom = 20.0

[node name="MusicButton" parent="PauseOverlay/HBoxContainer2" instance=ExtResource( 17 )]
margin_left = 145.0
margin_right = 163.0
margin_bottom = 20.0

[node name="EmptySpacerLabel" type="Label" parent="PauseOverlay/HBoxContainer2"]
margin_left = 167.0
margin_right = 175.0
margin_bottom = 20.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 13 )

[node name="TouchScreenControlsOnOffButton" parent="PauseOverlay/HBoxContainer2" instance=ExtResource( 12 )]
margin_left = 179.0
margin_right = 197.0
margin_bottom = 20.0

[node name="Sprite" type="Sprite" parent="PauseOverlay/HBoxContainer2"]
position = Vector2( 213.883, 10.4848 )
texture = ExtResource( 19 )

[connection signal="pressed" from="Control/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="gui_input" from="Control/HBoxContainerLeft/LeftButton" to="." method="_on_LeftButton_gui_input"]
[connection signal="gui_input" from="Control/HBoxContainerLeft/RightButton" to="." method="_on_RightButton_gui_input"]
[connection signal="input_event" from="Control/JumpButtonArea2D" to="." method="_on_JumpButtonArea2D_input_event"]
[connection signal="mouse_entered" from="Control/JumpButtonArea2D" to="." method="_on_JumpButtonArea2D_mouse_entered"]
[connection signal="gui_input" from="Control/TextureRect" to="." method="_on_TextureRect_gui_input"]
[connection signal="pressed" from="PauseOverlay/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="PauseOverlay/HBoxContainer/BigBackButton" to="PauseOverlay/HBoxContainer/BigBackButton" method="_on_pressed"]
[connection signal="pressed" from="PauseOverlay/HBoxContainer/PausedPlayButton" to="." method="_on_PausedPlayButton_pressed"]
[connection signal="pressed" from="PauseOverlay/HBoxContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
